[package]
name = "ai-chan"
version = "0.1.0"
authors = ["nasa <htilcs1115@gmail.com>"]
keywords = ["github-bot"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/k-nasa/ai-chan"
description = "A helpful operation bot for GitHub. It helps assign reviewers and merge pull requests."
edition = "2018"

[dependencies]
tide = {git="https://github.com/rustasync/tide"}
surf = { git = "https://github.com/rustasync/surf" }
dirs = "2.0"
failure = "0.1"
log = "0.4"
pretty_env_logger = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
toml = "0.5"
rust-crypto = "0.2.36"
rand = "0.6"
async-std = "0.99.10"
