[package]
name = "ai-chan"
version = "0.1.0"
authors = ["nasa <htilcs1115@gmail.com>"]
keywords = ["github-bot"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/k-nasa/ai-chan"
description = "A helpful operation bot for GitHub. It helps assign reviewers and merge pull requests."
edition = "2018"

[dependencies]
async-std = "1.5.0"
dirs = "3.0.0"
failure = "0.1.8"
log = "0.4.11"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
rust-crypto = "0.2.36"
serde = "1.0.114"
serde_derive = "1.0.105"
serde_json = "1.0.55"
surf = { git = "https://github.com/rustasync/surf" }
tide = {git="https://github.com/rustasync/tide"}
toml = "0.5.6"
base64 = "0.12.3"
